testsuite/tests/typecheck/should_fail/VisFlag5.stderr
VisFlag5.hs:8:1: error: [GHC-83865]
    • Couldn't match kind: forall i -> i -> i
                     with: forall i. i -> i
      Expected kind ‘(forall i. i -> i) -> *’,
        but ‘D Int’ has kind ‘(forall i -> i -> i) -> *’
    • In the data family instance declaration for ‘D’

